--- a/Simulation.ui
+++ b/Simulation.ui
@@ -1011,6 +1011,32 @@
     <item row="11" column="6">
      <widget class="QSpinBox" name="tresh_2_V_lower"/>
     </item>
+    <item row="9" column="1">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Thresh</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="2">
+     <widget class="QSpinBox" name="tresh_2"/>
+    </item>
+    <item row="6" column="1">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Thresh</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="2">
+     <widget class="QSpinBox" name="tresh_1"/>
+    </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="openButton">
