--- a/Simulation.ui
+++ b/Simulation.ui
@@ -1022,7 +1022,11 @@
      </widget>
     </item>
     <item row="9" column="2">
-     <widget class="QSpinBox" name="tresh_2"/>
+     <widget class="QSpinBox" name="tresh_2">
+      <property name="maximum">
+       <number>99999</number>
+      </property>
+     </widget>
     </item>
     <item row="6" column="1">
      <widget class="QLabel" name="label">
@@ -1035,7 +1039,11 @@
      </widget>
     </item>
     <item row="6" column="2">
-     <widget class="QSpinBox" name="tresh_1"/>
+     <widget class="QSpinBox" name="tresh_1">
+      <property name="maximum">
+       <number>99999</number>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
