--- a/PrincipalScreen.ui
+++ b/PrincipalScreen.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1024</width>
-    <height>723</height>
+    <height>693</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>721</height>
+     <height>715</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -52,7 +52,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0.891626, y2:0.902,
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
-     <string>Detector de falhas em ovos moles</string>
+     <string>Vision System Fabridoce Machine 2</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_cam1">
@@ -69,7 +69,7 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
-     <string>Camera1</string>
+     <string>Camera 1</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_cam2">
@@ -86,7 +86,7 @@ color: rgb(255, 255, 255);</string>
 font: 16pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="text">
-     <string>Camera2</string>
+     <string>Camera 2</string>
     </property>
    </widget>
    <widget class="QPushButton" name="start_button">
@@ -174,6 +174,19 @@ font: 16pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="checked">
      <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="timelabel">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>520</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Time: 0.0</string>
     </property>
    </widget>
   </widget>
